--- a/blocks/popup/__input-form/popup__input-form.css
+++ b/blocks/popup/__input-form/popup__input-form.css
@@ -7,10 +7,11 @@
     font-size: 14px;
     line-height: 1.21;
     color: #000000;
-    margin-top: 31px;
-    padding: 0 0 8px;
+    margin-top: 23px;
+    padding: 8px 0;
 }
   
-  .popup__input-form {
+  .popup__input-form:focus {
     outline: none;
+    border-bottom: 1px solid rgb(31, 31, 202);
   }
