--- a/blocks/elements/__heart/elements__heart.css
+++ b/blocks/elements/__heart/elements__heart.css
@@ -16,10 +16,10 @@
   opacity: 0.5;
 }
 
-/* .elements__heart:active {
+.elements__heart:active {
   background-image: url(../../../image/heart-active.svg);
   opacity: 1;
-} */
+}
 
 @media screen and (max-width: 450px) {
   .elements__heart {
