--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
     max-width: 880px;
     min-height: 74px;
-    border-bottom: 1px solid #545454;
+    border-bottom: 1px solid rgb(84, 84, 84, .7);
     margin: 0 auto;   
     padding-top: 45px;
 }
@@ -11,6 +11,5 @@
     margin: 0 auto;
     padding-top: 28px;
     min-height: 56px;
-    max-width: 320px;
-    }
+  }
 }
