--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -17,6 +17,7 @@
   @media screen and (max-width: 320px) {
   .profile__title {
       row-gap: 7px;
-      column-gap: 10px;
+      column-gap: 11px;
+      align-items: center;
   }
 }
