--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -8,6 +8,7 @@
   background-position: center;
   background-repeat: no-repeat;
   width: 150px;
+  height: 50px;
   transition: opacity 0.2s linear;
 }
 
