--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,13 +1,13 @@
 .header {
-    max-width: 880px;
-    min-height: 74px;
-    border-bottom: 1px solid rgb(84, 84, 84, .7);
-    margin: 0 auto;   
-    padding-top: 45px;
+  max-width: 880px;
+  min-height: 74px;
+  border-bottom: 1px solid rgb(84, 84, 84, 0.7);
+  margin: 0 auto;
+  padding-top: 45px;
 }
 
 @media screen and (max-width: 450px) {
-    .header {
+  .header {
     margin: 0 auto;
     padding-top: 28px;
     min-height: 56px;
