--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,9 +6,14 @@
   padding-top: 45px;
 }
 
+@media screen and (max-width: 1023px) {
+  .header {
+  padding: 35px 70px 0;
+  }
+}
+
 @media screen and (max-width: 450px) {
   .header {
-    margin: 0 auto;
     padding-top: 28px;
     min-height: 56px;
   }
