--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -16,7 +16,7 @@
   }
   
   @media screen and (max-width: 715px) {
-    .popup__content {
+    .popup__container {
       padding: 25px 22px;
       max-width: 282px;
     }
