--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,7 +8,8 @@
 
 @media screen and (max-width: 1023px) {
   .header {
-  padding: 35px 70px 0;
+    padding-top: 35px;
+    margin: 0 70px;
   }
 }
 
@@ -16,5 +17,6 @@
   .header {
     padding-top: 28px;
     min-height: 56px;
+    margin: 0;
   }
 }
