--- a/blocks/card/__heart/card__heart.css
+++ b/blocks/card/__heart/card__heart.css
@@ -1,4 +1,4 @@
-.elements__heart {
+.card__heart {
   padding: 0;
   border: none;
   background-color: #ffff;
@@ -13,17 +13,12 @@
   cursor: pointer;
 }
 
-.elements__heart:hover {
+.card__heart:hover {
   opacity: 0.5;
 }
 
-.elements__heart:active {
-  background-image: url(../../../image/heart-active.svg);
-  opacity: 1;
-}
-
 @media screen and (max-width: 450px) {
-  .elements__heart {
+  .card__heart {
     height: 18px;
   }
 }
