--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,6 +1,7 @@
-.elements__image {
+.card__image {
   height: 282px;
-  max-width: 282px;
+  width: 282px;
   object-fit: cover;
   border-radius: 10px 10px 0 0;
+  cursor: pointer;
 }
