--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,17 +1,17 @@
-.elements {
+.cards {
   margin: 0 auto;
   max-width: 880px;
   padding-top: 49px;
 }
 
 @media screen and (max-width: 1023px) {
-  .elements {
+  .cards {
     margin: 0 70px;
   }
 }
 
 @media screen and (max-width: 400px) {
-  .elements {
+  .cards {
     padding-top: 37px;
     margin: 0 19px;
   }
