--- a/pages/index.css
+++ b/pages/index.css
@@ -7,13 +7,16 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 
-@import url(../blocks/elements/elements.css);
-@import url(../blocks/elements/__album/elements__album.css);
-@import url(../blocks/elements/__caption/elements__caption.css);
-@import url(../blocks/elements/__heart/elements__heart.css);
-@import url(../blocks/elements/__image/elements__image.css);
-@import url(../blocks/elements/__title/elements__title.css);
-@import url(../blocks/elements/__element/elements__element.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__list/cards__list.css);
+
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/__caption/card__caption.css);
+@import url(../blocks/card/__delete-button/card__delete-button.css);
+@import url(../blocks/card/__heart/_active/card__heart_active.css);
+@import url(../blocks/card/__heart/card__heart.css);
+@import url(../blocks/card/__image/card__image.css);
+@import url(../blocks/card/__title/card__title.css);
 
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
@@ -31,7 +34,11 @@
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__container/__container-image/popup__container-image.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__input-form/popup__input-form.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__image-text/popup__image-text.css);
+@import url(../blocks/popup/_preview-image/popup_preview-image.css);
