--- a/blocks/card/__delete-button/card__delete-button.css
+++ b/blocks/card/__delete-button/card__delete-button.css
@@ -1,12 +1,15 @@
 .card__delete-button {
+  position: absolute;
+  right: 20px;
+  top: 20px;
   border: none;
   background: transparent url(../../../image/delete-button.svg) no-repeat center;
+  background-color: transparent;
   background-size: cover;
+  background-repeat: no-repeat;
   height: 19px;
   width: 18px;
-  position: absolute;
-  top: 20px;
-  right: 20px;
+  padding: 0;
   transition: opacity 0.1s linear;
   cursor: pointer;
 }
