--- a/blocks/card/__heart/card__heart.css
+++ b/blocks/card/__heart/card__heart.css
@@ -5,16 +5,19 @@
   height: 19px;
   width: 22px;
   align-self: center;
+  justify-self: end;
   background-image: url(../../../image/heart.svg);
-  background-repeat: no-repeat;
-  background-position: center;
   transition: opacity 0.2s linear;
-  flex-shrink: 0;
   cursor: pointer;
 }
 
 .card__heart:hover {
   opacity: 0.5;
+}
+
+.card__heart:active {
+  background-image: url(../../../image/heart-active.svg);
+  opacity: 1;
 }
 
 @media screen and (max-width: 450px) {
