--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,11 +1,8 @@
 .popup__container {
-  position: absolute;
+  position: relative;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
   max-width: 430px;
   width: 100%;
   background-color: #ffffff;
@@ -20,6 +17,5 @@
   .popup__container {
     padding: 25px 22px;
     max-width: 282px;
-    background-size: contain;
   }
 }
