--- a/blocks/popup/__image/popup__image.css
+++ b/blocks/popup/__image/popup__image.css
@@ -1,5 +1,6 @@
 .popup__image {
-  max-width: 75vw;
-  max-height: 75vh;
+  max-width: 100%;
+  max-height: 100%;
   object-fit: cover;
+  display: block;
 }
