--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,4 @@
-.popup__input-form {
+.popup__input {
   width: 100%;
   font-weight: 400;
   border: 0;
@@ -7,11 +7,10 @@
   font-size: 14px;
   line-height: 1.21;
   color: #000000;
-  margin-top: 23px;
-  padding: 8px 0;
+  margin-top: 32px;
+  padding: 0 0 8px;
 }
 
-.popup__input-form:focus {
+.popup__input:focus {
   outline: none;
-  border-bottom: 1px solid rgb(31, 31, 202);
 }
