--- a/blocks/card/__heart/card__heart.css
+++ b/blocks/card/__heart/card__heart.css
@@ -16,6 +16,11 @@
   opacity: 0.5;
 }
 
+.card__heart:active { 
+  background-image: url(../../../image/heart-active.svg); 
+  opacity: 1; 
+} 
+
 @media screen and (max-width: 450px) {
   .card__heart {
     height: 18px;
