--- a/src/blocks/card/__delete-button/card__delete-button.css
+++ b/src/blocks/card/__delete-button/card__delete-button.css
@@ -3,7 +3,7 @@
   right: 20px;
   top: 20px;
   border: none;
-  background: transparent url(../../../image/delete-button.svg) no-repeat center;
+  background: transparent url(../../../../src/image/delete-button.svg) no-repeat center;
   background-color: transparent;
   background-size: cover;
   background-repeat: no-repeat;
