--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,5 +1,5 @@
 .profile__edit-button {
-  background-image: url(../../../image/profile-edit-button.svg);
+  background-image: url(../../../../src/image/profile-edit-button.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-color: black;
