--- a/src/blocks/card/__heart/_active/card__heart_active.css
+++ b/src/blocks/card/__heart/_active/card__heart_active.css
@@ -1,5 +1,5 @@
 .card__heart_active {
-  background-image: url(../../../../image/heart-active.svg);
+  background-image: url(../../../../../src/image/heart-active.svg);
 }
 
 .card__heart_active:hover {
