--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -11,7 +11,7 @@
   }
 }
 
-@media (max-width: 400px) {
+@media screen and (max-width: 400px) {
   .footer {
     padding: 50px 0 36px;
     margin: 0 19px;
