--- a/src/blocks/popup/__close-button/popup__close-button.css
+++ b/src/blocks/popup/__close-button/popup__close-button.css
@@ -3,7 +3,7 @@
   right: -40px;
   top: -40px;
   border: none;
-  background: transparent url(../../../image/close_icon.svg) no-repeat center;
+  background: transparent url(../../../../src/image/close_icon.svg) no-repeat center;
   height: 32px;
   width: 32px;
   padding: 0;
