--- a/src/blocks/profile/__add-button/profile__add-button.css
+++ b/src/blocks/profile/__add-button/profile__add-button.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   border-radius: 2px;
   background-color: black;
-  background-image: url(../../../image/add-button.svg);
+  background-image: url(../../../../src/image/add-button.svg);
   background-position: center;
   background-repeat: no-repeat;
   width: 150px;
