--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,12 +1,34 @@
 .profile__avatar {
-  height: 100%;
-  width: 120px;
+  position: relative;
+  display: inline-block;
   border-radius: 50%;
-  object-fit: cover;
+  cursor: pointer;
 }
 
-@media screen and (min-width: 767px) {
+.profile__avatar::before {
+  position: absolute;
+  content: "";
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  background-image: url(../../../image/avatar-edit.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 26px;
+  border-radius: 50%;
+  display: block;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: visibility 0.5s, opacity 0.5s ease-in;
+}
+
+.profile__avatar:hover::before {
+  opacity: 1;
+}
+
+@media screen and (max-width: 768px) {
   .profile__avatar {
-    margin-bottom: 0;
+    margin-right: 0;
   }
 }
