--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -8,8 +8,8 @@
 .profile__avatar::before {
   position: absolute;
   content: "";
-  height: 100%;
-  width: 100%;
+  height: 120px;
+  width: 120px;
   background-color: rgba(0, 0, 0, 0.8);
   background-image: url(../../../image/avatar-edit.svg);
   background-repeat: no-repeat;
