--- a/src/blocks/popup/__save-button/_disabled/popup__save-button_disabled.css
+++ b/src/blocks/popup/__save-button/_disabled/popup__save-button_disabled.css
@@ -1,8 +1,7 @@
 .popup__save-button_disabled {
-    background: #ffff;
-    color: #E5E5E5;
-    box-sizing: border-box;
-    border: 1px solid #E5E5E5;
-    cursor: default;
-    background-color: black;
-  }
+  background: #ffff;
+  color: #e5e5e5;
+  box-sizing: border-box;
+  border: 1px solid #e5e5e5;
+  cursor: default;
+}
